502 page - add static files and fix centering

--- a/StaticErrorPages/502.html
+++ b/StaticErrorPages/502.html
@@ -15,7 +15,7 @@
 </head>
 <body style="background: #e9ecef linear-gradient(#c2d4fc 0,#e9ecef 250px) repeat-x;">
 	<div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
-		<img src="logo-light.png" style="image-rendering: pixelated; height: 348px; width: 484px; margin-left: -200px; animation: MoveUpDown 2.5s ease-in-out infinite;">
+		<img src="logo-light.png" style="image-rendering: pixelated; height: 348px; width: 484px; margin: auto; animation: MoveUpDown 2.5s ease-in-out infinite;">
     <div style="margin-top: -75px; font-family: sans-serif; text-align: center;">
       <h1>TASVideos is Temporarily Down for Upgrade Maintenance</h1>
 	    <p>The upgrade should take no more than a few hours.</p>
